--- a/.github/workflows/deploy-s3.yml
+++ b/.github/workflows/deploy-s3.yml
@@ -63,7 +63,7 @@ jobs:
         run: |
           aws cloudformation deploy \
             --template-file Infrastructure/Templates/S3/s3.yml \
-            --stack-name my-s3-bucket-stack-${{ github.ref }} \
+            --stack-name my-s3-bucket-stack-${{ github.ref_name }} \
             --parameter-overrides BucketName=my-s3-bucket-${{ github.run_id }} \
             --capabilities CAPABILITY_IAM
 
