--- a/Infrastructure/Templates/S3/s3.yml
+++ b/Infrastructure/Templates/S3/s3.yml
@@ -4,10 +4,13 @@ Description: Create an S3 Bucket
 Parameters:
   BucketName:
     Type: String
-    Description: The name of the S3 bucket
+    Description: The base name of the S3 bucket
+  Environment:
+    Type: String
+    Description: The environment name (e.g., npd-dev, nft-internal)
 
 Resources:
   MyS3Bucket:
     Type: 'AWS::S3::Bucket'
     Properties:
-      BucketName: !Ref BucketName
+      BucketName: !Sub '${BucketName}-${Environment}'
