--- a/Scripts/test.yml
+++ b/Scripts/test.yml
@@ -3,14 +3,10 @@ name: Deploy-npd-dev
 on:
   push:
     branches:
-    #  - develop
-  
-permissions:
-  id-token: write
-  contents: read
+      - develop
 
 jobs:
-  deploy-s3:
+  Create-Changeset:
     runs-on: default
     environment: test-otds-nonprod
     steps:
@@ -27,7 +23,36 @@ jobs:
         run: aws sts get-caller-identity
       - name: Deploy Infra
          run: |
-          - chmod +x scripts/create-changeset.sh
-          - scripts/create-changeset.sh --environment-name npd-dev --debug true
+          chmod +x scripts/create-changeset.sh
+          scripts/create-changeset.sh --environment-name npd-dev --debug true
+
+  Manual_approval:
+    needs: Create-Changeset
+    runs-on: default
+    environment: test-otds-nonprod
+    steps:
+      - name: Awaiting Manual Review
+        run: echo "Please manually review the changeset and approve."
+
+  Deploy-Changeset:
+    runs-on: default
+    environment: test-otds-nonprod
+    steps:
+      - name: Check out repository code
+        uses: actions/checkout@v4
+      - name: Assume CICD Role
+        uses: CBA-General/rrcs-common-actions/cs-aws-assume-deploy-role@main
+        with:
+          workload-account-id: ${{ vars.AWS_ACCOUNT_ID }}
+          workload-deploy-role: ${{ vars.AWS_DEPLOY_ROLE }}
+          github-trust-role: ${{ vars.AWS_TRUST_ROLE }}
+          aws-region: ${{ vars.AWS_REGION  }}
+      - name: whoami
+        run: aws sts get-caller-identity
+      - name: Deploy Infra
+         run: |
+          chmod +x Scripts/deploy.sh
+          echo "Deploying the changeset"
+          Scripts/deploy.sh --environment-name npd-dev --debug true
 
       
