--- a/Scripts/test.yml
+++ b/Scripts/test.yml
@@ -18,11 +18,11 @@ jobs:
           workload-account-id: ${{ vars.AWS_ACCOUNT_ID }}
           workload-deploy-role: ${{ vars.AWS_DEPLOY_ROLE }}
           github-trust-role: ${{ vars.AWS_TRUST_ROLE }}
-          aws-region: ${{ vars.AWS_REGION  }}
+          aws-region: ${{ vars.AWS_REGION }}
       - name: whoami
         run: aws sts get-caller-identity
       - name: Deploy Infra
-         run: |
+        run: |
           chmod +x scripts/create-changeset.sh
           scripts/create-changeset.sh --environment-name npd-dev --debug true
 
@@ -35,6 +35,7 @@ jobs:
         run: echo "Please manually review the changeset and approve."
 
   Deploy-Changeset:
+    needs: Manual_approval
     runs-on: default
     environment: test-otds-nonprod
     steps:
@@ -46,13 +47,11 @@ jobs:
           workload-account-id: ${{ vars.AWS_ACCOUNT_ID }}
           workload-deploy-role: ${{ vars.AWS_DEPLOY_ROLE }}
           github-trust-role: ${{ vars.AWS_TRUST_ROLE }}
-          aws-region: ${{ vars.AWS_REGION  }}
+          aws-region: ${{ vars.AWS_REGION }}
       - name: whoami
         run: aws sts get-caller-identity
       - name: Deploy Infra
-         run: |
-          chmod +x Scripts/deploy.sh
+        run: |
+          chmod +x scripts/deploy.sh
           echo "Deploying the changeset"
-          Scripts/deploy.sh --environment-name npd-dev --debug true
-
-      
+          scripts/deploy.sh --environment-name npd-dev --debug true
