--- a/Scripts/test.yml
+++ b/Scripts/test.yml
@@ -1,9 +1,12 @@
-name: Deploy-npd-dev
+name: Deploy Nonprod Environments
 
 on:
   push:
     branches:
-      - develop
+      - non-prod
+    paths:
+      - 'infrastructure/parameters/non-prod/npd-dev/*'
+      - 'infrastructure/templates/**'
 
 permissions:
   id-token: write
@@ -30,16 +33,8 @@ jobs:
           chmod +x scripts/create-changeset.sh
           scripts/create-changeset.sh --environment-name npd-dev --debug true
 
-  Manual_approval:
-    needs: Create-Changeset
-    runs-on: default
-    environment: Manual-Approval
-    steps:
-      - name: Awaiting Manual Review
-        run: echo "The Changeset has been approved, proceeding to Deploy-Changeset."
-
   Deploy-Changeset:
-    needs: Manual_approval
+    needs: Create-Changeset
     runs-on: default
     environment: test-otds-nonprod
     steps:
@@ -59,5 +54,3 @@ jobs:
           chmod +x scripts/deploy.sh
           echo "Deploying the changeset"
           scripts/deploy.sh --environment-name npd-dev --debug true
-
-      
