--- a/Scripts/final-all-workflow.yml
+++ b/Scripts/final-all-workflow.yml
@@ -30,50 +30,50 @@ jobs:
           ENV_VARS='{
             "npd-dev": {
               "ACCOUNT_ID": "${{ vars.AWS_ACCOUNT_ID_NPD_DEV }}",
-              "DEPLOY_ROLE": "${{ vars.AWS_DEPLOY_ROLE }}",
-              "TRUST_ROLE": "${{ vars.AWS_TRUST_ROLE }}",
-              "REGION": "${{ vars.AWS_REGION }}"
+              "DEPLOY_ROLE": "${{ vars.AWS_DEPLOY_ROLE_COMMON }}",
+              "TRUST_ROLE": "${{ vars.AWS_TRUST_ROLE_COMMON }}",
+              "REGION": "${{ vars.AWS_REGION_COMMON }}"
             },
             "npd-st": {
               "ACCOUNT_ID": "${{ vars.AWS_ACCOUNT_ID_NPD_ST }}",
-              "DEPLOY_ROLE": "${{ vars.AWS_DEPLOY_ROLE }}",
-              "TRUST_ROLE": "${{ vars.AWS_TRUST_ROLE }}",
-              "REGION": "${{ vars.AWS_REGION }}"
+              "DEPLOY_ROLE": "${{ vars.AWS_DEPLOY_ROLE_COMMON }}",
+              "TRUST_ROLE": "${{ vars.AWS_TRUST_ROLE_COMMON }}",
+              "REGION": "${{ vars.AWS_REGION_COMMON }}"
             },
             "npd-sit": {
               "ACCOUNT_ID": "${{ vars.AWS_ACCOUNT_ID_NPD_SIT }}",
-              "DEPLOY_ROLE": "${{ vars.AWS_DEPLOY_ROLE }}",
-              "TRUST_ROLE": "${{ vars.AWS_TRUST_ROLE }}",
-              "REGION": "${{ vars.AWS_REGION_NPD }}"
+              "DEPLOY_ROLE": "${{ vars.AWS_DEPLOY_ROLE_COMMON }}",
+              "TRUST_ROLE": "${{ vars.AWS_TRUST_ROLE_COMMON }}",
+              "REGION": "${{ vars.AWS_REGION_COMMON }}"
             },
             "nft-internal": {
               "ACCOUNT_ID": "${{ vars.AWS_ACCOUNT_ID_NFT_INTERNAL }}",
-              "DEPLOY_ROLE": "${{ vars.AWS_DEPLOY_ROLE }}",
-              "TRUST_ROLE": "${{ vars.AWS_TRUST_ROLE }}",
-              "REGION": "${{ vars.AWS_REGION }}"
+              "DEPLOY_ROLE": "${{ vars.AWS_DEPLOY_ROLE_COMMON }}",
+              "TRUST_ROLE": "${{ vars.AWS_TRUST_ROLE_COMMON }}",
+              "REGION": "${{ vars.AWS_REGION_COMMON }}"
             },
             "nft-customer": {
               "ACCOUNT_ID": "${{ vars.AWS_ACCOUNT_ID_NFT_CUSTOMER }}",
-              "DEPLOY_ROLE": "${{ vars.AWS_DEPLOY_ROLE }}",
+              "DEPLOY_ROLE": "${{ vars.AWS_DEPLOY_ROLE_COMMON }}",
               "TRUST_ROLE": "${{ vars.AWS_TRUST_ROLE_NFT }}",
-              "REGION": "${{ vars.AWS_REGION }}"
+              "REGION": "${{ vars.AWS_REGION_COMMON }}"
             },
             "prd-internal": {
               "ACCOUNT_ID": "${{ vars.AWS_ACCOUNT_ID_PRD_INTERNAL }}",
-              "DEPLOY_ROLE": "${{ vars.AWS_DEPLOY_ROLE }}",
-              "TRUST_ROLE": "${{ vars.AWS_TRUST_ROLE }}",
-              "REGION": "${{ vars.AWS_REGION }}"
+              "DEPLOY_ROLE": "${{ vars.AWS_DEPLOY_ROLE_COMMON }}",
+              "TRUST_ROLE": "${{ vars.AWS_TRUST_ROLE_COMMON }}",
+              "REGION": "${{ vars.AWS_REGION_COMMON }}"
             },
             "prd-customer": {
               "ACCOUNT_ID": "${{ vars.AWS_ACCOUNT_ID_PRD_CUSTOMER }}",
-              "DEPLOY_ROLE": "${{ vars.AWS_DEPLOY_ROLE }}",
-              "TRUST_ROLE": "${{ vars.AWS_TRUST_ROLE}}",
-              "REGION": "${{ vars.AWS_REGION }}"
+              "DEPLOY_ROLE": "${{ vars.AWS_DEPLOY_ROLE_COMMON }}",
+              "TRUST_ROLE": "${{ vars.AWS_TRUST_ROLE_COMMON}}",
+              "REGION": "${{ vars.AWS_REGION_COMMON }}"
             }
           }'
 
           # Get the current branch name without 'refs/heads/'
-          BRANCH_NAME=$(echo "${{ github.ref }}" | sed 's|refs/heads/||')
+          BRANCH_NAME=$(echo "${{ github.ref }}" | sed 's|refs/heads/||')         
 
           # Extract environment variables from the JSON based on the branch
           ACCOUNT_ID=$(echo $ENV_VARS | jq -r --arg branch "$BRANCH_NAME" '.[$branch].ACCOUNT_ID')
@@ -86,6 +86,18 @@ jobs:
           echo "DEPLOY_ROLE=${DEPLOY_ROLE}" >> $GITHUB_ENV
           echo "TRUST_ROLE=${TRUST_ROLE}" >> $GITHUB_ENV
           echo "REGION=${REGION}" >> $GITHUB_ENV
+          echo "BRANCH_NAME=${BRANCH_NAME}" >> $GITHUB_ENV
+
+      - name: Environment to Deploy
+        run: |
+          echo "Environemnt being used for this deployment:"
+          echo "ENVIRONMENT NAME: ${{ env.BRANCH_NAME }}"
+          echo "ACCOUNT ID: ${{ env.ACCOUNT_ID }}"
+          echo "DEPLOY ROLE: ${{ env.DEPLOY_ROLE }}"
+          echo "TRUST ROLE: ${{ env.TRUST_ROLE }}"
+          echo "REGION: ${{ env.REGION }}"
+          echo "=============================="
+
 
       - name: Assume CICD Role
         uses: CBA-General/rrcs-common-actions/cs-aws-assume-deploy-role@main
@@ -108,7 +120,7 @@ jobs:
     runs-on: default
     environment: Manual-Approval
     steps:
-      - name: Review Request
+      - name: Changeset request approved
         run: echo "The Changeset has been approved, proceeding to Deploy-Changeset."
 
   Deploy:
