--- a/Scripts/outputs-all-workflow.yml
+++ b/Scripts/outputs-all-workflow.yml
@@ -25,14 +25,13 @@ jobs:
       deploy_role: ${{ steps.set_env.outputs.deploy_role }}
       trust_role: ${{ steps.set_env.outputs.trust_role }}
       region: ${{ steps.set_env.outputs.region }}
-
     steps:
       - name: Check out repository code
         uses: actions/checkout@v4
 
       - name: Set Environment Variables
-        id: set_env
         run: |
+          # Create a JSON object mapping branch names to environment variables
           ENV_VARS='{
             "npd-dev": {
               "ACCOUNT_ID": "${{ vars.AWS_ACCOUNT_ID_NPD_DEV }}",
@@ -78,17 +77,21 @@ jobs:
             }
           }'
 
+          # Get the current branch name without 'refs/heads/'
           BRANCH_NAME=$(echo "${{ github.ref }}" | sed 's|refs/heads/||')         
 
+          # Extract environment variables from the JSON based on the branch
           ACCOUNT_ID=$(echo $ENV_VARS | jq -r --arg branch "$BRANCH_NAME" '.[$branch].ACCOUNT_ID')
           DEPLOY_ROLE=$(echo $ENV_VARS | jq -r --arg branch "$BRANCH_NAME" '.[$branch].DEPLOY_ROLE')
           TRUST_ROLE=$(echo $ENV_VARS | jq -r --arg branch "$BRANCH_NAME" '.[$branch].TRUST_ROLE')
           REGION=$(echo $ENV_VARS | jq -r --arg branch "$BRANCH_NAME" '.[$branch].REGION')
 
+          # Export the environment variables
           echo "ACCOUNT_ID=${ACCOUNT_ID}" >> $GITHUB_ENV
           echo "DEPLOY_ROLE=${DEPLOY_ROLE}" >> $GITHUB_ENV
           echo "TRUST_ROLE=${TRUST_ROLE}" >> $GITHUB_ENV
           echo "REGION=${REGION}" >> $GITHUB_ENV
+          echo "BRANCH_NAME=${BRANCH_NAME}" >> $GITHUB_ENV
 
           echo "::set-output name=account_id::${ACCOUNT_ID}"
           echo "::set-output name=deploy_role::${DEPLOY_ROLE}"
@@ -104,6 +107,7 @@ jobs:
           echo "TRUST ROLE: ${{ steps.set_env.outputs.trust_role }}"
           echo "REGION: ${{ steps.set_env.outputs.region }}"
           echo "=============================="
+
 
       - name: Assume CICD Role
         uses: CBA-General/rrcs-common-actions/cs-aws-assume-deploy-role@main
@@ -143,10 +147,10 @@ jobs:
       - name: Assume CICD Role
         uses: CBA-General/rrcs-common-actions/cs-aws-assume-deploy-role@main
         with:
-          workload-account-id: ${{ needs.Create-Changeset.outputs.account_id }}
-          workload-deploy-role: ${{ needs.Create-Changeset.outputs.deploy_role }}
-          github-trust-role: ${{ needs.Create-Changeset.outputs.trust_role }}
-          aws-region: ${{ needs.Create-Changeset.outputs.region }}
+          workload-account-id: ${{ steps.set_env.outputs.account_id }}
+          workload-deploy-role: ${{ steps.set_env.outputs.deploy_role }}
+          github-trust-role: ${{ steps.set_env.outputs.trust_role }}
+          aws-region: ${{ steps.set_env.outputs.region }}
 
       - name: whoami
         run: aws sts get-caller-identity
