--- a/Scripts/outputs-all-workflow.yml
+++ b/Scripts/outputs-all-workflow.yml
@@ -30,8 +30,8 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Set Environment Variables
+        id: set_env
         run: |
-          # Create a JSON object mapping branch names to environment variables
           ENV_VARS='{
             "npd-dev": {
               "ACCOUNT_ID": "${{ vars.AWS_ACCOUNT_ID_NPD_DEV }}",
@@ -77,45 +77,36 @@ jobs:
             }
           }'
 
-          # Get the current branch name without 'refs/heads/'
           BRANCH_NAME=$(echo "${{ github.ref }}" | sed 's|refs/heads/||')         
 
-          # Extract environment variables from the JSON based on the branch
           ACCOUNT_ID=$(echo $ENV_VARS | jq -r --arg branch "$BRANCH_NAME" '.[$branch].ACCOUNT_ID')
           DEPLOY_ROLE=$(echo $ENV_VARS | jq -r --arg branch "$BRANCH_NAME" '.[$branch].DEPLOY_ROLE')
           TRUST_ROLE=$(echo $ENV_VARS | jq -r --arg branch "$BRANCH_NAME" '.[$branch].TRUST_ROLE')
           REGION=$(echo $ENV_VARS | jq -r --arg branch "$BRANCH_NAME" '.[$branch].REGION')
 
-          # Export the environment variables
           echo "ACCOUNT_ID=${ACCOUNT_ID}" >> $GITHUB_ENV
           echo "DEPLOY_ROLE=${DEPLOY_ROLE}" >> $GITHUB_ENV
           echo "TRUST_ROLE=${TRUST_ROLE}" >> $GITHUB_ENV
           echo "REGION=${REGION}" >> $GITHUB_ENV
           echo "BRANCH_NAME=${BRANCH_NAME}" >> $GITHUB_ENV
 
-          echo "::set-output name=account_id::${ACCOUNT_ID}"
-          echo "::set-output name=deploy_role::${DEPLOY_ROLE}"
-          echo "::set-output name=trust_role::${TRUST_ROLE}"
-          echo "::set-output name=region::${REGION}"
-
       - name: Environment to Deploy
         run: |
           echo "Environment being used for this deployment:"
           echo "ENVIRONMENT NAME: ${{ github.ref_name }}"
-          echo "ACCOUNT ID: ${{ steps.set_env.outputs.account_id }}"
-          echo "DEPLOY ROLE: ${{ steps.set_env.outputs.deploy_role }}"
-          echo "TRUST ROLE: ${{ steps.set_env.outputs.trust_role }}"
-          echo "REGION: ${{ steps.set_env.outputs.region }}"
+          echo "ACCOUNT ID: ${{ env.account_id }}"
+          echo "DEPLOY ROLE: ${{ env.deploy_role }}"
+          echo "TRUST ROLE: ${{ env.trust_role }}"
+          echo "REGION: ${{ env.region }}"
           echo "=============================="
-
 
       - name: Assume CICD Role
         uses: CBA-General/rrcs-common-actions/cs-aws-assume-deploy-role@main
         with:
-          workload-account-id: ${{ steps.set_env.outputs.account_id }}
-          workload-deploy-role: ${{ steps.set_env.outputs.deploy_role }}
-          github-trust-role: ${{ steps.set_env.outputs.trust_role }}
-          aws-region: ${{ steps.set_env.outputs.region }}
+          workload-account-id: ${{ env.account_id }}
+          workload-deploy-role: ${{ env.deploy_role }}
+          github-trust-role: ${{ env.trust_role }}
+          aws-region: ${{ env.region }}
 
       - name: whoami
         run: aws sts get-caller-identity
@@ -147,16 +138,10 @@ jobs:
       - name: Assume CICD Role
         uses: CBA-General/rrcs-common-actions/cs-aws-assume-deploy-role@main
         with:
-          workload-account-id: ${{ steps.set_env.outputs.account_id }}
-          workload-deploy-role: ${{ steps.set_env.outputs.deploy_role }}
-          github-trust-role: ${{ steps.set_env.outputs.trust_role }}
-          aws-region: ${{ steps.set_env.outputs.region }}
+          workload-account-id: ${{ needs.Create-Changeset.outputs.account_id }}
+          workload-deploy-role: ${{ needs.Create-Changeset.outputs.deploy_role }}
+          github-trust-role: ${{ needs.Create-Changeset.outputs.trust_role }}
+          aws-region: ${{ needs.Create-Changeset.outputs.region }}
 
       - name: whoami
-        run: aws sts get-caller-identity
-
-      - name: Deploy Infra
-        run: |
-          chmod +x scripts/deploy.sh
-          echo "Deploying the changeset"
-          scripts/deploy.sh --environment-name ${{ github.ref_name }} --debug true
+        run: aws sts get
