--- a/Scripts/final-all-workflow.yml
+++ b/Scripts/final-all-workflow.yml
@@ -19,12 +19,19 @@ permissions:
 jobs:
   Create-Changeset:
     runs-on: default
-    environment: test-otds-nonprod
+    environment: NonProd-Create-Changeset
+    outputs:
+      ACCOUNT_ID: ${{ steps.set-env.outputs.ACCOUNT_ID }}
+      DEPLOY_ROLE: ${{ steps.set-env.outputs.DEPLOY_ROLE }}
+      TRUST_ROLE: ${{ steps.set-env.outputs.TRUST_ROLE }}
+      REGION: ${{ steps.set-env.outputs.REGION }}
+      BRANCH_NAME: ${{ steps.set-env.outputs.BRANCH_NAME }}
     steps:
       - name: Check out repository code
         uses: actions/checkout@v4
 
       - name: Set Environment Variables
+        id: set-env
         run: |
           # Create a JSON object mapping branch names to environment variables
           ENV_VARS='{
@@ -55,7 +62,7 @@ jobs:
             "nft-customer": {
               "ACCOUNT_ID": "${{ vars.AWS_ACCOUNT_ID_NFT_CUSTOMER }}",
               "DEPLOY_ROLE": "${{ vars.AWS_DEPLOY_ROLE_COMMON }}",
-              "TRUST_ROLE": "${{ vars.AWS_TRUST_ROLE_NFT }}",
+              "TRUST_ROLE": "${{ vars.AWS_TRUST_ROLE_COMMON }}",
               "REGION": "${{ vars.AWS_REGION_COMMON }}"
             },
             "prd-internal": {
@@ -81,31 +88,32 @@ jobs:
           TRUST_ROLE=$(echo $ENV_VARS | jq -r --arg branch "$BRANCH_NAME" '.[$branch].TRUST_ROLE')
           REGION=$(echo $ENV_VARS | jq -r --arg branch "$BRANCH_NAME" '.[$branch].REGION')
 
-          # Export the environment variables
-          echo "ACCOUNT_ID=${ACCOUNT_ID}" >> $GITHUB_ENV
-          echo "DEPLOY_ROLE=${DEPLOY_ROLE}" >> $GITHUB_ENV
-          echo "TRUST_ROLE=${TRUST_ROLE}" >> $GITHUB_ENV
-          echo "REGION=${REGION}" >> $GITHUB_ENV
-          echo "BRANCH_NAME=${BRANCH_NAME}" >> $GITHUB_ENV
+          # Set job outputs using GITHUB_OUTPUT
+          echo "ACCOUNT_ID=${ACCOUNT_ID}" >> $GITHUB_OUTPUT
+          echo "DEPLOY_ROLE=${DEPLOY_ROLE}" >> $GITHUB_OUTPUT
+          echo "TRUST_ROLE=${TRUST_ROLE}" >> $GITHUB_OUTPUT
+          echo "REGION=${REGION}" >> $GITHUB_OUTPUT
+          echo "BRANCH_NAME=${BRANCH_NAME}" >> $GITHUB_OUTPUT
+
 
       - name: Environment to Deploy
         run: |
-          echo "Environemnt being used for this deployment:"
-          echo "ENVIRONMENT NAME: ${{ env.BRANCH_NAME }}"
-          echo "ACCOUNT ID: ${{ env.ACCOUNT_ID }}"
-          echo "DEPLOY ROLE: ${{ env.DEPLOY_ROLE }}"
-          echo "TRUST ROLE: ${{ env.TRUST_ROLE }}"
-          echo "REGION: ${{ env.REGION }}"
+          echo "Environment being used for this deployment:"
+          echo "ENVIRONMENT NAME: ${{ steps.set-env.outputs.BRANCH_NAME }}"
+          echo "ACCOUNT ID: ${{ steps.set-env.outputs.ACCOUNT_ID }}"
+          echo "DEPLOY ROLE: ${{ steps.set-env.outputs.DEPLOY_ROLE }}"
+          echo "TRUST ROLE: ${{ steps.set-env.outputs.TRUST_ROLE }}"
+          echo "REGION: ${{ steps.set-env.outputs.REGION }}"
           echo "=============================="
 
 
       - name: Assume CICD Role
         uses: CBA-General/rrcs-common-actions/cs-aws-assume-deploy-role@main
         with:
-          workload-account-id: ${{ env.ACCOUNT_ID }}
-          workload-deploy-role: ${{ env.DEPLOY_ROLE }}
-          github-trust-role: ${{ env.TRUST_ROLE }}
-          aws-region: ${{ env.REGION }}
+          workload-account-id: ${{ steps.set-env.outputs.ACCOUNT_ID }}
+          workload-deploy-role: ${{ steps.set-env.outputs.DEPLOY_ROLE }}
+          github-trust-role: ${{ steps.set-env.outputs.TRUST_ROLE }}
+          aws-region: ${{ steps.set-env.outputs.REGION }}
 
       - name: whoami
         run: aws sts get-caller-identity
@@ -113,23 +121,23 @@ jobs:
       - name: Create Changeset
         run: |
           chmod +x scripts/create-changeset.sh
-          scripts/create-changeset.sh --environment-name ${{ github.ref_name }} --debug true
+          scripts/create-changeset.sh --environment-name ${{ steps.set-env.outputs.BRANCH_NAME }} --debug true
 
-  Manual_Approval:
+
+  Deploy-Changeset:
     needs: Create-Changeset
     runs-on: default
-    environment: Manual-Approval
-    steps:
-      - name: Changeset request approved
-        run: echo "The Changeset has been approved, proceeding to Deploy-Changeset."
-
-  Deploy:
-    needs: Manual_Approval
-    runs-on: default
-    environment: test-otds-nonprod
+    environment: NonProd-Deploy-Changeset
     steps:
       - name: Changeset Approval 
-        run: echo "The Changeset has been approved, proceeding to Deploy-Changeset."
+        run: echo "The Changeset has been approved, proceeding to Deploy Changeset."
+      
+      - name: Check Environment Variables
+        run: |
+          echo "ACCOUNT_ID: ${{ needs.Create-Changeset.outputs.ACCOUNT_ID }}"
+          echo "DEPLOY_ROLE: ${{ needs.Create-Changeset.outputs.DEPLOY_ROLE }}"
+          echo "TRUST_ROLE: ${{ needs.Create-Changeset.outputs.TRUST_ROLE }}"
+          echo "REGION: ${{ needs.Create-Changeset.outputs.REGION }}"
 
       - name: Check out repository code
         uses: actions/checkout@v4
@@ -137,10 +145,10 @@ jobs:
       - name: Assume CICD Role
         uses: CBA-General/rrcs-common-actions/cs-aws-assume-deploy-role@main
         with:
-          workload-account-id: ${{ env.ACCOUNT_ID }}
-          workload-deploy-role: ${{ env.DEPLOY_ROLE }}
-          github-trust-role: ${{ env.TRUST_ROLE }}
-          aws-region: ${{ env.REGION }}
+          workload-account-id: ${{ needs.Create-Changeset.outputs.ACCOUNT_ID }}
+          workload-deploy-role: ${{ needs.Create-Changeset.outputs.DEPLOY_ROLE }}
+          github-trust-role: ${{ needs.Create-Changeset.outputs.TRUST_ROLE }}
+          aws-region: ${{ needs.Create-Changeset.outputs.REGION }}
 
       - name: whoami
         run: aws sts get-caller-identity
@@ -149,4 +157,4 @@ jobs:
         run: |
           chmod +x scripts/deploy.sh
           echo "Deploying the changeset"
-          scripts/deploy.sh --environment-name ${{ github.ref_name }} --debug true
+          scripts/deploy.sh --environment-name ${{ needs.Create-Changeset.outputs.BRANCH_NAME }} --debug true
